# ChangeLog for app-i18n/uim
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/uim/ChangeLog,v 1.63 2004/07/30 23:45:36 matsuu Exp $

*uim-0.4.2.1 (31 Jul 2004)

  31 Jul 2004; MATSUU Takuto <matsuu@gentoo.org> +uim-0.4.2.1.ebuild:
  Version bumped.

  18 Jul 2004; Tom Gall <tgall@gentoo.org> uim-0.4.1.ebuild:
  stable on ppc64, bug #57120

*uim-0.4.1 (11 Jul 2004)

  11 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> -uim-0.4.0.ebuild,
  +uim-0.4.1.ebuild:
  Version bumped.

  10 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> uim-0.4.0.ebuild:
  Block app-i18n/uim-fep since uim-0.4.0 includes uim-fep

*uim-0.4.0 (09 Jul 2004)

  09 Jul 2004; Mamoru KOMACHI <usata@gentoo.org> -uim-0.3.9-r2.ebuild,
  +uim-0.4.0.ebuild:
  Version bumped.

*uim-0.3.9-r2 (16 Jun 2004)

  16 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> -uim-0.3.6.ebuild,
  +uim-0.3.9-r2.ebuild:
  Added m17n-lib IUSE flag. Removed old version.

  15 Jun 2004; <matsuu@gentoo.org> uim-0.3.9-r1.ebuild:
  Added ~sparc to KEYWORDS.

*uim-0.3.9-r1 (15 Jun 2004)

  15 Jun 2004; MATSUU Takuto <matsuu@gentoo.org> +uim-0.3.9-r1.ebuild:
  Added X to IUSE.
  Fixed xim compile problem.

*uim-0.3.9 (14 Jun 2004)

  14 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> +uim-0.3.9.ebuild:
  Version bumped.

  14 Jun 2004; MATSUU Takuto <matsuu@gentoo.org> uim-0.3.8.ebuild:
  Added ~amd64 to KEYWORDS.

  05 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> uim-0.3.4.2.ebuild,
  uim-0.3.8.ebuild:
  Resurrected 0.3.4.2 as >=uim-0.3.5 freezes in some KDE env.
  Marked 0.3.8 stable.

*uim-0.3.8 (18 May 2004)

  18 May 2004; Mamoru KOMACHI <usata@gentoo.org> uim-0.3.3.ebuild,
  uim-0.3.4.2.ebuild, uim-0.3.6.ebuild, uim-0.3.8.ebuild:
  Version bumped. Removed old ebuilds and marked 0.3.6 stable.

*uim-0.3.6 (06 May 2004)

  06 May 2004; Mamoru KOMACHI <usata@gentoo.org> uim-0.3.5.ebuild,
  uim-0.3.6.ebuild, files/uim-0.3.5-engines.diff: