@@ -1,13 +1,13 @@
-MD5 8a8f60ca8f4521f81f837b78bfe300ea uim-0.3.9-r1.ebuild 1645
 MD5 34615589ffd80dd22ddbbc083a225c5d uim-0.3.8.ebuild 1462
 MD5 c1116fda1e7a58cfdf919d2291ae3de5 uim-0.3.4.2.ebuild 1634
-MD5 deb854144ec8844a89d1e4efbd5ed382 uim-0.4.2.1.ebuild 1746
-MD5 2c00f4fbace93cef7784c53dbe05c0d2 uim-0.4.1.ebuild 1735
-MD5 f1cd2a465f51f9e96ed961eb13422c13 ChangeLog 10182
+MD5 e783c1ebcdcc0ab3c878e1e1394b2c63 ChangeLog 10299
 MD5 f5659d73ef347dcb529d867d6d5b4272 metadata.xml 642
+MD5 a7023b54219479527ad4a90e8eb667cb uim-0.4.1.ebuild 1733
+MD5 025776a41967b57814e7a53ff053ecf0 uim-0.3.9-r1.ebuild 1640
+MD5 deb854144ec8844a89d1e4efbd5ed382 uim-0.4.2.1.ebuild 1746
 MD5 43709db248e2be1d40952ce99d3cae00 files/uim-gtk-query-immodules-gentoo.diff 552
-MD5 d815d9c3b5979e781fe0522731ee7ff6 files/digest-uim-0.3.9-r1 61
-MD5 7bdf9e0d0dc5497df9b2df4d8d730674 files/digest-uim-0.3.8 61
 MD5 bb951055d72fd152ee21f5f8cfc9140f files/digest-uim-0.4.1 61
+MD5 7bdf9e0d0dc5497df9b2df4d8d730674 files/digest-uim-0.3.8 61
 MD5 b9c8399a56165f6cfe164b17a273ea2a files/digest-uim-0.3.4.2 63
+MD5 d815d9c3b5979e781fe0522731ee7ff6 files/digest-uim-0.3.9-r1 61
 MD5 00537e2c63ca679a4889917d52b74a60 files/digest-uim-0.4.2.1 63
