@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/uim
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/uim/ChangeLog,v 1.63 2004/07/30 23:45:36 matsuu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/uim/ChangeLog,v 1.64 2004/08/03 18:28:26 usata Exp $
+
+  04 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> uim-0.3.9-r1.ebuild,
+  uim-0.4.1.ebuild:
+  Stable on x86 and alpha.
 
 *uim-0.4.2.1 (31 Jul 2004)
 
